--- a/m2/w2/d5/progetto/index.html
+++ b/m2/w2/d5/progetto/index.html
@@ -103,68 +103,76 @@
             </div>
         </div>
     </section>
-
+<!--
     <section id="price my-5 container">
-    <p class="fs-2 p-2 my-5 fw-bold text-black text-center ">
-        I NOSTRI ALBERI
-    </p>
-            <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-                <div class="col-3">
-                  <div class="card mb-4 rounded-3 shadow-sm border-success">
+        <p class="fs-2 p-2 my-5 fw-bold text-black text-center ">
+            I NOSTRI ALBERI
+        </p>
+        <div class="row   mb-3 text-center">
+            <div class="col-1">
+                <div class="card mb-4 rounded-3 shadow-sm border-success">
                     <div class="card-header py-3">
-                      <h4 class="my-0 fw-normal">BAOBAB</h4>
+                        <h4 class="my-0 fw-normal">BAOBAB</h4>
                     </div>
                     <div class="card-body" id="baobab">
-                      <h1 class="card-title pricing-card-title"><span class="text-bg-warning px-2 prezzoAlbero rounded-2">$26</span></h1>
-                      <ul class="list-unstyled mt-3 mb-4  text-bg-light rounded-2">
-                        <li>una parte della somma sara devoluta agli abitanti del posto</li>
-                        <li>Avrai aggiornamenti foto e video della pianta</li>
-                        <li>Assistenza</li>
-                        <li>Una penna marchiata <span class="text-bg-success px-1 ">PIANTALA &reg;</span></li>
-                      </ul>
-                      <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta ora!</button>
+                        <h1 class="card-title pricing-card-title"><span
+                                class="text-bg-warning px-2 prezzoAlbero rounded-2">$26</span></h1>
+                        <ul class="list-unstyled mt-3 mb-4  text-bg-light rounded-2">
+                            <li>una parte della somma sara devoluta agli abitanti del posto</li>
+                            <li>Avrai aggiornamenti foto e video della pianta</li>
+                            <li>Assistenza</li>
+                            <li>Una penna marchiata <span class="text-bg-success px-1 ">PIANTALA &reg;</span></li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta
+                            ora!</button>
                     </div>
-                  </div>
                 </div>
-            <div class="col-3">
-              <div class="card mb-4 rounded-3 shadow-sm border-success">
-                <div class="card-header py-3">
-                  <h4 class="my-0 fw-normal">SAUGAGE TREE (KIGELIA AFRICANA)</h4>
-                </div>
-                <div class="card-body"  id="sausagetree">
-                  <h1 class="card-title pricing-card-title"><span class="text-bg-warning px-2 prezzoAlbero rounded-2">$35</span></h1>
-                  <ul class="list-unstyled mt-3 mb-4 text-bg-light rounded-2">
-                    <li>una parte della somma sara devoluta agli abitanti del posto</li>
-                    <li>Avrai aggiornamenti foto e video della pianta</li>
-                    <li>Assistenza</li>
-                    <li>Decidi dove lo pianti!</li>
-                  </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta ora!</button>
-                </div>
-              </div>
             </div>
-            <div class="col-3">
-              <div class="card mb-5 rounded-3 shadow-sm border-success">
-                <div class="card-header py-3 text-bg-light border-success">
-                  <h4 class="my-0 fw-normal">MARULA TREE (SCLEROCARYA BIRREA)</h4>
+            <div class="col-12">
+                <div class="card mb-4 rounded-3 shadow-sm border-success">
+                    <div class="card-header py-3">
+                        <h4 class="my-0 fw-normal">SAUGAGE TREE (KIGELIA AFRICANA)</h4>
+                    </div>
+                    <div class="card-body" id="sausagetree">
+                        <h1 class="card-title pricing-card-title"><span
+                                class="text-bg-warning px-2 prezzoAlbero rounded-2">$35</span></h1>
+                        <ul class="list-unstyled mt-3 mb-4 text-bg-light rounded-2">
+                            <li>una parte della somma sara devoluta agli abitanti del posto</li>
+                            <li>Avrai aggiornamenti foto e video della pianta</li>
+                            <li>Assistenza</li>
+                            <li>Decidi dove lo pianti!</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta
+                            ora!</button>
+                    </div>
                 </div>
-                <div class="card-body" id="marulatree">
-                  <h1 class="card-title pricing-card-title "> <span class="text-bg-warning px-2 prezzoAlbero rounded-2">$49</span> </h1>
-                  <ul class="list-unstyled mt-3 mb-4 text-bg-light rounded-2">
-                    <li>una parte della somma sara devoluta agli abitanti del posto</li>
-                    <li>Avrai aggiornamenti foto e video della pianta</li>
-                    <li>Assistenza </li>
-                    <li>Riceverai un buono sconto del <span class="text-bg-primary px-1" > 20% </span> da regalare a chi vuoi!</li>
-                  </ul>
-                  <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta ora!</button>
-                </div>
-              </div>
             </div>
-          </div>
+            <div class="col-12">
+                <div class="card mb-5 rounded-3 shadow-sm border-success">
+                    <div class="card-header py-3 text-bg-light border-success">
+                        <h4 class="my-0 fw-normal">MARULA TREE (SCLEROCARYA BIRREA)</h4>
+                    </div>
+                    <div class="card-body" id="marulatree">
+                        <h1 class="card-title pricing-card-title "> <span
+                                class="text-bg-warning px-2 prezzoAlbero rounded-2">$49</span> </h1>
+                        <ul class="list-unstyled mt-3 mb-4 text-bg-light rounded-2">
+                            <li>una parte della somma sara devoluta agli abitanti del posto</li>
+                            <li>Avrai aggiornamenti foto e video della pianta</li>
+                            <li>Assistenza </li>
+                            <li>Riceverai un buono sconto del <span class="text-bg-primary px-1"> 20% </span> da
+                                regalare a chi vuoi!</li>
+                        </ul>
+                        <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta
+                            ora!</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
-
+-->
     <section id="Carusello">
-        <h2 class="fs-2 p-5 fw-bold text-center "> <span class="text-bg-success px-2"> AIUTA LA NATURA ANCHE TU!</span></h2>
+        <h2 class="fs-2 p-5 fw-bold text-center "> <span class="text-bg-success px-2"> AIUTA LA NATURA ANCHE TU!</span>
+        </h2>
         <div id="carouselCaptions" class="carousel slide pb-5 " data-bs-ride="carousel">
             <div class="carousel-indicators pb-5 ">
                 <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="0" class="active"
@@ -231,24 +239,28 @@
                 <!-- Section: Social media -->
                 <section class="mb-4 ">
                     <!-- Facebook -->
-                    <a class="btn btn-outline-light btn-floating m-1" target="_blank"  href="https://www.facebook.com/epicodeitalia" role="button"><i
+                    <a class="btn btn-outline-light btn-floating m-1" target="_blank"
+                        href="https://www.facebook.com/epicodeitalia" role="button"><i
                             class="bi bi-facebook fs-3"></i></a>
 
                     <!-- Twitter -->
-                    <a class="btn btn-outline-light btn-floating m-1" target="_blank"  href="https://twitter.com/home?lang=it" role="button"><i
-                            class="bi bi-twitter fs-3"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1" target="_blank"
+                        href="https://twitter.com/home?lang=it" role="button"><i class="bi bi-twitter fs-3"></i></a>
 
                     <!-- Instagram -->
-                    <a class="btn btn-outline-light btn-floating m-1" target="_blank"  href="https://www.instagram.com/_ilcary_s.r.l._/ " role="button"><i
+                    <a class="btn btn-outline-light btn-floating m-1" target="_blank"
+                        href="https://www.instagram.com/_ilcary_s.r.l._/ " role="button"><i
                             class="bi bi-instagram fs-3"></i></a>
 
                     <!-- Linkedin -->
-                    <a class="btn btn-outline-light btn-floating m-1" href="https://www.linkedin.com/school/epicodeitalia/mycompany/" target="_blank"  role="button"><i
+                    <a class="btn btn-outline-light btn-floating m-1"
+                        href="https://www.linkedin.com/school/epicodeitalia/mycompany/" target="_blank" role="button"><i
                             class="bi bi-linkedin fs-3"></i></a>
 
                     <!-- Whatsapp -->
-                    <a class="btn btn-outline-light btn-floating m-1"  href="https://wa.me/3337007324?text=Ciao%20sono%20interessato%20alla%20tua%20azienda" target="_blank" role="button"><i
-                            class="bi bi-whatsapp fs-3"></i></a>
+                    <a class="btn btn-outline-light btn-floating m-1"
+                        href="https://wa.me/3337007324?text=Ciao%20sono%20interessato%20alla%20tua%20azienda"
+                        target="_blank" role="button"><i class="bi bi-whatsapp fs-3"></i></a>
                 </section>
                 <!-- Section: Social media -->
 
@@ -269,7 +281,8 @@
                             <div class="col-md-5 col-12">
                                 <!-- Email input -->
                                 <div class="form-outline form-white mb-4">
-                                    <input type="email" id="inMail" class="form-control" placeholder="mariorossi@gmail.com"/>
+                                    <input type="email" id="inMail" class="form-control"
+                                        placeholder="mariorossi@gmail.com" />
                                 </div>
                             </div>
                             <!--Grid column-->
@@ -291,17 +304,17 @@
                 <!-- Section: Text -->
                 <section class="mb-4">
                     <p class="text-center">
-                       <h2 class="fw-bold text-success">Natura</h2> 
-                        Voce comunissima, che abbraccia tutte le forme delle cose quanto le essenze e le cagioni. Natura
-                        principio del moto e della quiete, e anche ordine divino per il quale tutte le cose si muovono,
-                        nascono e muoiono [Latino: Natura].
-                        La tua natura è ciò che sei - l'insieme di cosa pensi, di quello che senti e di come ti
-                        comporti. Potrebbe essere nella tua natura la caratteristica di rimanere calmo ed equilibrato
-                        anche di fronte ad una sfida difficile. Anche le cose che non sono persone possono anche avere
-                        una propria natura: si può notare la natura frenetica di un dibattito politico, o si potrebbe
-                        mettere in discussione la natura delle amicizie di tuo fratello. Il termine può anche riferirsi
-                        al mondo fisico fatto di piante e animali: quello che credi che sia "la vita all'aria aperta".
-                        Ad esempio, potresti essere un amante della natura che adora le escursioni.
+                    <h2 class="fw-bold text-success">Natura</h2>
+                    Voce comunissima, che abbraccia tutte le forme delle cose quanto le essenze e le cagioni. Natura
+                    principio del moto e della quiete, e anche ordine divino per il quale tutte le cose si muovono,
+                    nascono e muoiono [Latino: Natura].
+                    La tua natura è ciò che sei - l'insieme di cosa pensi, di quello che senti e di come ti
+                    comporti. Potrebbe essere nella tua natura la caratteristica di rimanere calmo ed equilibrato
+                    anche di fronte ad una sfida difficile. Anche le cose che non sono persone possono anche avere
+                    una propria natura: si può notare la natura frenetica di un dibattito politico, o si potrebbe
+                    mettere in discussione la natura delle amicizie di tuo fratello. Il termine può anche riferirsi
+                    al mondo fisico fatto di piante e animali: quello che credi che sia "la vita all'aria aperta".
+                    Ad esempio, potresti essere un amante della natura che adora le escursioni.
                     </p>
                 </section>
                 <!-- Section: Text -->
