--- a/m2/w2/d5/progetto/index.html
+++ b/m2/w2/d5/progetto/index.html
@@ -48,14 +48,14 @@
     <section id="primoPiano">
         <div class="container  flex-column justify-content-center text-center p-5">
             <p class="fs-2 mt-5 p-2 fw-bold text-white">
-                <span class="topTitle"> FAI LA DIFFERENZA </span>
+                <span class="topTitle "> FAI LA DIFFERENZA </span>
             </p>
             <P class="fs-3 p-2 fw-semibold fst-italic text-white  rounded">
-                <i class="bi bi-tree fs-2"></i> <span class="text-bg-success"> Gli alberi:</span> sono un bene per la
+                <i class="bi bi-tree fs-2"></i> <span class="text-bg-success  px-1"> Gli alberi:</span> sono un bene per la
                 natura!
             </P>
             <p class="fs-4 p-2 fw-semibold fst-italic text-white introPrimopiano rounded">
-                <i class="bi bi-lightning-charge fs-2"></i> <span class="text-bg-warning">Non solo:</span> grazie ai
+                <i class="bi bi-lightning-charge fs-2"></i> <span class="text-bg-warning px-1">Non solo:</span> grazie ai
                 loro processi di respirazione e fotosintesi, gli alberi aiutano a combattere il
                 riscaldamento climatico assorbendo l'anidride carbonica e contribuiscono alla pulizia dell'aria,
                 incamerando inquinanti come ozono, ossidi di nitrogeno e biossidi di zolfo.
@@ -65,7 +65,7 @@
 
     <section id="partnerShip">
         <p class="fs-2 p-2 my-5 fw-bold text-black text-center ">
-            I NOSTRI BRAND
+            I NOSTRI BRAND <i class="bi bi-house-heart"></i>
         </p>
         <div class="row" id="brandsContainer">
             <div class="col-md-4 py-4 text-center bg-light">
@@ -103,13 +103,13 @@
             </div>
         </div>
     </section>
-<!--
+    <!--   
     <section id="price my-5 container">
         <p class="fs-2 p-2 my-5 fw-bold text-black text-center ">
             I NOSTRI ALBERI
         </p>
-        <div class="row   mb-3 text-center">
-            <div class="col-1">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 w-75  g-3">
+            <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm border-success">
                     <div class="card-header py-3">
                         <h4 class="my-0 fw-normal">BAOBAB</h4>
@@ -128,7 +128,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12">
+            <div class="col">
                 <div class="card mb-4 rounded-3 shadow-sm border-success">
                     <div class="card-header py-3">
                         <h4 class="my-0 fw-normal">SAUGAGE TREE (KIGELIA AFRICANA)</h4>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-12">
+            <div class="col">
                 <div class="card mb-5 rounded-3 shadow-sm border-success">
                     <div class="card-header py-3 text-bg-light border-success">
                         <h4 class="my-0 fw-normal">MARULA TREE (SCLEROCARYA BIRREA)</h4>
@@ -169,7 +169,112 @@
             </div>
         </div>
     </section>
--->
+
+ -->
+ <p class="fs-2 p-2 my-5 fw-bold text-black text-center ">
+            I NOSTRI ALBERI <i class="bi bi-tree fs-2"></i>
+        </p>
+    <section class=' d-flex justify-content-center bg-light my-5'>
+       
+        <div class="row row-cols-1  row-cols-md-1 row-cols-lg-3 w-75  g-3">
+            <div class="container col py-5">
+                <div class=" justify-content-center">
+                    <div class="">
+                        <div class="card text-black">
+                            <i class="fab fa-apple fa-lg pt-3 pb-1 px-3"></i>
+                            <img src="./images/alberi_price/baobab-min.webp" class="card-img-top" alt="BAOBAB" />
+                            <div class="card-body">
+                                <div class="text-center">
+                                    <h5 class="card-title">BAOBAB</h5>
+                                    <p class="text-muted mb-2">Disponibile</p>
+                                </div>
+                                <h3 class="card-title pricing-card-title text-center "> <span
+                                    class="text-success px-2 prezzoAlbero rounded-2 fw-bold mb-2">$28</span> </h3>
+                                <div>
+                                    <ul class="list-unstyled text-bg-light rounded-2 text-center">
+                                        <li>Una parte della somma sara devoluta agli abitanti del posto</li>
+                                        <li>Avrai aggiornamenti foto e video della pianta</li>
+                                        <li>Assistenza </li>
+                                        <li>Riceverai un buono sconto del <span class="text-bg-warning rounded-2 px-1"> 20%
+                                            </span> da
+                                            regalare a chi vuoi!</li>
+                                    </ul>
+                                    <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta
+                                        ora!</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container col py-5">
+                <div class="justify-content-center">
+                    <div class="col-sm-12">
+                        <div class="card text-black">
+                            <i class="fab fa-apple fa-lg pt-3 pb-1 px-3"></i>
+                            <img src="./images/alberi_price/marulatree.jpg" class="card-img-top" alt="marulatree" />
+                            <div class="card-body">
+                                <div class="text-center">
+                                    <h5 class="card-title">MARULA TREE (SCLEROCARYA)</h5>
+                                    <p class="text-muted mb-2">Disponibile</p>
+                                </div>
+                                <h3 class="card-title pricing-card-title text-center "> <span
+                                    class="text-success px-2 prezzoAlbero rounded-2 fw-bold mb-2">$39</span> </h3>
+                                <div>
+                                    <ul class="list-unstyled text-bg-light rounded-2 text-center">
+                                        <li>Una parte della somma sara devoluta agli abitanti del posto</li>
+                                        <li>Avrai aggiornamenti foto e video della pianta</li>
+                                        <li>Assistenza </li>
+                                        <li>Riceverai un buono sconto del <span class="text-bg-warning rounded-2 px-1"> 20%
+                                            </span> da
+                                            regalare a chi vuoi!</li>
+                                    </ul>
+                                    <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta
+                                        ora!</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="container col py-5">
+                <div class=" justify-content-center">
+                    <div class="col-sm-12">
+                        <div class="card text-black">
+                            <i class="fab fa-apple fa-lg pt-3 pb-1 px-3"></i>
+                            <img src="./images/alberi_price/sausagetree.jpg" class="card-img-top" alt="sausage tree" />
+                            <div class="card-body">
+                                <div class="text-center">
+                                    <h5 class="card-title">SAUGAGE TREE (KIGELIA AFRICANA)</h5>
+                                    <p class="text-muted mb-2">Disponibile</p>
+                                </div>
+                                <h3 class="card-title pricing-card-title text-center "> <span
+                                    class="text-success px-2 prezzoAlbero rounded-2 fw-bold mb-2">$52</span> </h3>
+                                <div>
+                                    <ul class="list-unstyled text-bg-light rounded-2 text-center">
+                                        <li>Una parte della somma sara devoluta agli abitanti del posto</li>
+                                        <li>Avrai aggiornamenti foto e video della pianta</li>
+                                        <li>Assistenza </li>
+                                        <li>Riceverai un buono sconto del <span class="text-bg-warning rounded-2 px-1"> 20%
+                                            </span> da
+                                            regalare a chi vuoi!</li>
+                                    </ul>
+                                    <button type="button" class="w-100 btn btn-lg btn-outline-success btn-light">Pianta
+                                        ora!</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <section id="Carusello">
         <h2 class="fs-2 p-5 fw-bold text-center "> <span class="text-bg-success px-2"> AIUTA LA NATURA ANCHE TU!</span>
         </h2>
@@ -203,7 +308,7 @@
                         <h5 class="bg-success rounded userNick"><i class="bi bi-person-hearts"></i> Cesidio Romani</h5>
                         <p class="caroselloRecensione">Siamo felicissimi di aver creato una bellissima foresta per il
                             nostro matrimonio! Non è solo un’idea, ma una grande convinzione quella di poter rendere più
-                            verde la terra che abitiamo! Grazie Treedom e grazie Carisio!</p>
+                            verde la terra che abitiamo! Grazie Piantala e grazie Carisio!</p>
                     </div>
                 </div>
                 <div class="carousel-item ">
