--- a/m2/w3/d4/crud/modifica.html
+++ b/m2/w3/d4/crud/modifica.html
@@ -1,47 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modifica utente</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <title>Modifica</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
+
 <body>
-    <h1>Modifica utente</h1>
+
     <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-          <svg class="bi me-2" width="40" height="32"><use xlink:href="#bootstrap"></use></svg>
-          <span class="fs-4">Gestione utenti </span>
+            <svg class="bi me-2" width="40" height="32">
+                <use xlink:href="#bootstrap"></use>
+            </svg>
+            <span class="fs-4">Gestione utenti </span>
         </a>
-  
+
         <ul class="nav nav-pills">
-          <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="crea-utente.html" class="nav-link">Crea nuovo utente</a></li>
+            <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="crea-utente.html" class="nav-link">Crea nuovo utente</a></li>
         </ul>
-      </header>
+    </header>
 
-      <form id="update">
-
-        <div class="row">
-
-          <div class="col-5">
-            <input type="text" class="form-control" id="nome" placeholder="nome">
-          </div>
-          <div class="col-5">
-            <input type="text" class="form-control" id="cognome" placeholder="cognome">
-          </div>
-          <div class="col-2">
-            <input type="number" class="form-control" id="eta" placeholder="età">
-          </div>
-
-          <button class="btn btn-primary">Salva</button>
-
-        </div>
-
-      </form>
- 
-      <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-      <script src="js/update.js"></script>
+    <table id="tabella-utenti" class="table">
+        <tr>
+            <th>Nome</th>
+            <th>Cognome</th>
+            <th>eta</th>
+            <th>azioni</th>
+        </tr>
+    </table>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="js/read.js"></script>
+    <script src="js/update.js"></script>
 </body>
+
 </html>
