--- a/m2/w3/d5/progetto/index.html
+++ b/m2/w3/d5/progetto/index.html
@@ -21,7 +21,7 @@
 
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-                    <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
+                    <li><a href="#" class="nav-link px-2 text-white">Chi siamo</a></li>
                 </ul>
 
                 <div class="text-end">
@@ -35,17 +35,16 @@
     <div class="d-none" id="cardTemplate">
         <div class="container  mt-4">
             <div class="card" style="width: 18rem;">
-                <img src="" class="card-img-top" alt="">
+                <img src="" class="card-img-top m-auto my-2 w-25"  alt="">
                 <div class="card-body bg-primary text-white">
-                    <h5 class="card-title"><!-- Card title --></h5>
-                    <p class="card-text"><!-- Some quick example text to build on the card title and make up the bulk of the
-                        card's content. --></p>
+                    <h5 class="card-title"><!-- Nickname --></h5>
+                    <p class="card-text text-center"><!--Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis reprehenderit, voluptas suscipit consectetur laborum quae corporis doloribus perferendis iste asperiores quibusdam--> </p>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><!-- An item --></li>
-                    <li class="list-group-item"><!-- A second item --></li>
-                    <li class="list-group-item"><!-- A third item --></li>
-                    <li class="list-group-item"><!-- A third item --></li>
+                    <li class="list-group-item"><!-- f name --></li>
+                    <li class="list-group-item"><!-- l name --></li>
+                    <li class="list-group-item"><!-- gender --></li>
+                    <li class="list-group-item"><!-- mail --></li>
                 </ul>
             </div>
         </div>
