--- a/m2/w3/d5/progetto+crude/crea.html
+++ b/m2/w3/d5/progetto+crude/crea.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-light">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
       <svg class="bi me-2" width="40" height="32">
         <use xlink:href="#bootstrap"></use>
