--- a/m2/w3/d5/progetto+crude/index.html
+++ b/m2/w3/d5/progetto+crude/index.html
@@ -9,8 +9,8 @@
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 
-<body>
-    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+<body class="bg-success">
+    <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-light">
         <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
           <svg class="bi me-2" width="40" height="32">
             <use xlink:href="#bootstrap"></use>
