--- a/m2/w3/d5/progetto+crude/mod.html
+++ b/m2/w3/d5/progetto+crude/mod.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+  <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom bg-light">
     <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
       <svg class="bi me-2" width="40" height="32">
         <use xlink:href="#bootstrap"></use>
@@ -22,7 +22,7 @@
 
     <ul class="nav nav-pills">
       <li class="nav-item"><a href="index.html" class="nav-link " aria-current="page">Home</a></li>
-      <li class="nav-item"><a href="crea-utente.html" class="nav-link active">Crea nuovo utente</a></li>
+      <li class="nav-item"><a href="crea-utente.html" class="nav-link">Crea nuovo utente</a></li>
     </ul>
   </header>
 
