--- a/m2/w3/d5/progetto+crude/index.html
+++ b/m2/w3/d5/progetto+crude/index.html
@@ -20,7 +20,7 @@
     
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="index.html" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="crea.html" class="nav-link">Crea nuovo utente</a></li>
+          <li class="nav-item"><a href="crea.html" class="nav-link">Create a new user</a></li>
         </ul>
       </header>
 
