--- a/m2/w3/d5/progetto+crude/mod.html
+++ b/m2/w3/d5/progetto+crude/mod.html
@@ -22,7 +22,7 @@
 
     <ul class="nav nav-pills">
       <li class="nav-item"><a href="index.html" class="nav-link " aria-current="page">Home</a></li>
-      <li class="nav-item"><a href="crea-utente.html" class="nav-link">Crea nuovo utente</a></li>
+      <li class="nav-item"><a href="crea-utente.html" class="nav-link">Create a new user</a></li>
     </ul>
   </header>
 
