--- a/m2/w3/d5/progetto+crude/index.html
+++ b/m2/w3/d5/progetto+crude/index.html
@@ -38,8 +38,8 @@
                     <li class="list-group-item"><!-- gender --></li>
                     <li class="list-group-item"><!-- mail --></li>
                     <li class="list-group-item m-auto">
-                      <a id="modifica" class="btn btn-warning" >Modifica</a>
-                      <a id="elimina" class="btn btn-danger" >Elimina</a>
+                      <a id="modifica" class="btn btn-warning" >Update</a>
+                      <a id="elimina" class="btn btn-danger" >Delete</a>
                     </li>
                 </ul>
             </div>
