--- a/m2/w3/d5/progetto+crude/crea.html
+++ b/m2/w3/d5/progetto+crude/crea.html
@@ -47,10 +47,11 @@
           <input type="text" class="form-control" id="lastname" placeholder="lastname">
         </div>
         <div class="col-4"  >
-          <label for="gender" class="fw-bolder text-primary" >Gender</label>
+          <label for="gender"  class="fw-bolder text-primary" >Gender</label>
           <select class="form-control" id="gender">
             <option>Male</option>
             <option>Female</option>
+            <option>Other</option>
           </select>
       </div>
         <div class="col-4"  >
