--- a/m2/w3/d5/progetto+crude/mod.html
+++ b/m2/w3/d5/progetto+crude/mod.html
@@ -51,6 +51,7 @@
           <select class="form-control" id="gender">
             <option>Male</option>
             <option>Female</option>
+            <option>Other</option>
           </select>
       </div>
         <div class="col-4"  >
@@ -58,7 +59,7 @@
           <input type="text" class="form-control" id="email" placeholder="email">
         </div>
 
-        <button class="btn btn-primary mt-3" id="update" >Salva</button>
+        <button class="btn btn-primary mt-3" id="update" >Save</button>
 
       </div>
     </div>
